# godot-ui-feedback-mcp

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
godot_ui_feedback_mcp/: __init__.py  core.py  feedback_bridge.py  server.py
godot_ui_feedback_mcp/templates/tools/: export_ui_proxy.gd
templates/tools/: export_ui_proxy.gd  ui_proxy_exporter.gd
tests/: test_core.py  test_feedback_bridge.py  test_godot_integration.py  test_server.py
